--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Elidas cleaning service client",
+  "name": "cleaning-service",
   "private": true,
   "description": "Home cleaning business",
   "version": "0.1.0",
